# voice-logger

./: .gitignore  README.ja.md  README.md  config.example.toml  pyproject.toml
deploy/autostart/: voice-logger.desktop
deploy/launchd/: com.mantaroh.voice-logger.plist
deploy/systemd/: voice-logger.service
scripts/: install_whisper_kotoba.sh  uninstall_whisper_kotoba.sh
voice_logger/: config.py  main.py  pipeline.py  state.py  summarizer.py  transcribe.py  tray.py  types.py  usb.py  utils.py
